# auto-chain-verify

./: .gitignore  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: lib.rs
contract/tests/: test.rs
src/components/: Navigation.jsx  Search.jsx  Vehicles.jsx
src/pages/: _app.js  index.js
src/pages/vehicle/: [id].js
src/styles/: globals.css
