[package]
name = "autochain-contract"
description = "Auto Chain Smart Contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.5.0"

[dev-dependencies]
near-sdk = { version = "5.5.0", features = ["unit-testing"] }
near-workspaces = "3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
