[package]
name = "vehicle-maintenance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.7.0"
borsh = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8.21"

[dev-dependencies]
near-workspaces = { version = "0.16.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
chrono = "0.4.38"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
